# app/Http/Controllers/PowerController.php
@@ -8,7 +8,10 @@ use App\Models\Power;
 class PowerController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/api/power",
+     *     @OA\Response(response="200", description="Display all powers")
+     * )
      */
     public function index()
     {
@@ -34,7 +37,18 @@ class PowerController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="/api/power/{id}",
+     *     @OA\Parameter(
+    *          name="id",
+    *          in="path",
+    *          required=true,
+    *          description="ID of the city",
+    *          @OA\Schema(type="integer")
+    *      ),
+     *     @OA\Response(response="200", description="Display a specific power")
+     *
+     * )
      */
     public function show(string $id)
     {
