# storage/api-docs/api-docs.json
@@ -1,10 +1,41 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "My First API",
+        "title": "Agence super hero api",
         "version": "0.1"
     },
     "paths": {
+        "/api/city": {
+            "get": {
+                "operationId": "c2504917c4da1139bffc3dd1d5409f8f",
+                "responses": {
+                    "200": {
+                        "description": "Display all cities"
+                    }
+                }
+            }
+        },
+        "/api/city/{id}": {
+            "get": {
+                "operationId": "5a7b6766b61b35c52ccb43edd7a33259",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the city",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a specific city and its heroes"
+                    }
+                }
+            }
+        },
         "/api/hero": {
             "get": {
                 "operationId": "df30085c1784aaa94727132391699837",
@@ -32,6 +63,68 @@
                 "responses": {
                     "200": {
                         "description": "Display a specific hero and his power, transport, city and team"
+                    }
+                }
+            }
+        },
+        "/api/power": {
+            "get": {
+                "operationId": "4fedc55085482d5a4fc20263ebb58daa",
+                "responses": {
+                    "200": {
+                        "description": "Display all powers"
+                    }
+                }
+            }
+        },
+        "/api/power/{id}": {
+            "get": {
+                "operationId": "ed9ba669ac7fe798127dfcdde810166d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the city",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a specific power"
+                    }
+                }
+            }
+        },
+        "/api/team": {
+            "get": {
+                "operationId": "8552dd0225e6b98cfd20200cff987939",
+                "responses": {
+                    "200": {
+                        "description": "Display all team"
+                    }
+                }
+            }
+        },
+        "/api/team/{id}": {
+            "get": {
+                "operationId": "71327544c30baa9706be0707cfeb2459",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the city",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a specific team and its heroes"
                     }
                 }
             }
